Pre-picard removal

--- a/main.tex
+++ b/main.tex
@@ -106,8 +106,9 @@ R )$ to Taylor's Theorem to Clairut's Theorem.
 \item Fix step count
 
 \item Change ``star-refinement'' to ``the star refines''. 
-\end{itemize}
 
+\item A sum of infinitely-many positive elements in a partially-ordered field which is negative ($1+p+p^2+\cdots =\frac{1}{1-p}$ in $\Q _p$).
+\end{itemize}
 
 
 \chapter{What is a number?}\label{chp1}
