--- a/differentiation.tex
+++ b/differentiation.tex
@@ -420,7 +420,7 @@ f(x)=\int _a^x\dif x\, \tfrac{\dif}{\dif x}f(x).
 \end{equation}
 Well, sort of.  If we're not careful about what we mean, this can completely fail..  That's right---your calculus teachers \emph{lied to you}.  You should sue them.\footnote{I'm exaggerating for dramatic effect.  (So dramatic, isn't it?)  When you first took calculus, the idea that a derivative would be defined only almost-everywhere was probably just not a thing.}
 \begin{exm}[A uniformly-continuous function on {$[0,1]$} that is $0$ at $0$, $1$ at $1$, but whose derivative is $0$ almost everywhere---the Devil's Staircase]
-We've see this bad boy before---see \cref{CantorFunction}.\footnote{There, it was used to generate an example of a uniform-homemorphism of $\R$ that preserves neither measurability not measure $0$.}  The construction is relatively long, and so we don't repeat it here, but if it helps you remember, it's that function which is constant on the components of the complement of the Cantor Set in $[0,1]$.  In fact, as the Cantor Set has measure $0$, it follows from this fact that the derivative of the Devil's Staircase is $0$ almost-everywhere.  Hence, on one hand we have that $\int _0^1\dif x\, \frac{\dif}{\dif x}f(x)=0$, but on the other hand we have $f(1)-f(0)=1$.  Turns-out that a lot can happen on a set of measure $0$!
+We've seen this bad boy before---see \cref{CantorFunction}.\footnote{There, it was used to generate an example of a uniform-homemorphism of $\R$ that preserves neither measurability not measure $0$.}  The construction is relatively long, and so we don't repeat it here, but if it helps you remember, it's that function which is constant on the components of the complement of the Cantor Set in $[0,1]$.  In fact, as the Cantor Set has measure $0$, it follows from this fact that the derivative of the Devil's Staircase is $0$ almost-everywhere.  Hence, on one hand we have that $\int _0^1\dif x\, \frac{\dif}{\dif x}f(x)=0$, but on the other hand we have $f(1)-f(0)=1$.  Turns-out that a lot can happen on a set of measure $0$!
 
 In fact, you can modify this by adding $x$ to obtain a \emph{uniform-homeomorphism} (the Cantor Function---see the same example, \cref{CantorFunction}) which has derivative $1$ almost-everywhere, but yet goes from $0$ to \emph{not} $1$, but $2$, on $[0,1]$.  The point is, you can have \emph{ridiculously nice} functions for which the Fundamental Theorem of Calculus fails.
 \end{exm}
@@ -524,7 +524,7 @@ Show that $\lim _{x\to \infty}\exp (x)=\infty$ and $\lim _{x\to -\infty}x^m\exp 
 
 Cool, so now we have a function that is its own derivative.  What about a function that is \emph{minus} its own derivative.  Well, now that we have $\exp$ in hand, this is actually really easy.
 \begin{exr}
-Show that $x\mapsto \exp (-x)$ is the unique function from $\R$ to $\R$ such that (i) is equal to minus its derivative and (ii) is equal to $0$ at $1$.
+Show that $x\mapsto \exp (-x)$ is the unique function from $\R$ to $\R$ such that (i) is equal to minus its derivative and (ii) is equal to $1$ at $0$.
 \end{exr}
 
 What about second derivatives?  Well, of course, we $\exp$ is equal to its own second derivative.  That's easy.  But what about a function that is equal to \emph{minus} its own second derivative?  If we wanted to play the same trick as before, we would need to consider the function $x\mapsto \exp (\alpha x)$ for some number $\alpha$ with $\alpha ^2=-1$, but that's just craziness.  Only looney-toons would ever think about such nonsense.\footnote{But seriously:  why is there no \emph{real} number whose square is $-1$?}  Looks like we're just going to have to come up with a new name for such a function.  ``Cosine'' sounds rad.  Let's call it that.
